--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,7 +3,6 @@
 ---
 
 <svg
-  class="logo"
   width="149"
   height="30"
   viewBox="0 0 149 30"
@@ -51,7 +50,7 @@
 </svg>
 
 <style>
-  .logo {
+  svg {
     height: var(--step-1);
     width: auto;
   }
