--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -154,6 +154,7 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
     width: 600px;
     max-width: 100%;
     order: 1;
+    mix-blend-mode: multiply;
   }
 
   .content {
