Logo with snail

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -27,6 +27,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     gap: var(--space-l);
   }
 
+  img {
+    mix-blend-mode: multiply;
+  }
+
   p {
     font-size: var(--step-2);
     text-wrap: balance;
