--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,10 +7,9 @@ const year = new Date().getFullYear();
 <footer>
   <div class="links">
     <strong>Namesake</strong>
-    <a href="/blog">Blog</a>
     <a href="/press">Press</a>
     <a href="/brand-assets">Brand Assets</a>
-    <span>&copy; 2022&hairsp;&ndash;&hairsp;{year}</span>
+    <span class="copyright">&copy; 2022&hairsp;&ndash;&hairsp;{year}</span>
   </div>
   <div class="links">
     <strong>Social</strong>
@@ -29,8 +28,8 @@ const year = new Date().getFullYear();
 <style lang="scss">
   footer {
     display: flex;
-    gap: var(--space-xl);
-    align-items: flex-end;
+    gap: var(--space-3xl);
+    align-items: stretch;
     padding: var(--space-l);
     line-height: 1.5;
     width: 100%;
@@ -44,12 +43,17 @@ const year = new Date().getFullYear();
     font-size: var(--step--1);
   }
 
+  .copyright {
+    margin-block-start: auto;
+  }
+
   .social {
     display: flex;
     gap: var(--space-s);
   }
 
   .glyph {
+    align-self: flex-end;
     margin-inline-start: auto;
     width: 80px;
   }
