--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,12 +9,17 @@ import Header from "../components/Header.astro";
 
 export interface Props {
   title: string;
-  description: string;
+  description?: string;
   ogImage?: string;
   ogAlt?: string;
 }
 
-const { title, description, ogImage, ogAlt } = Astro.props;
+const {
+  title,
+  description = "Namesake helps you navigate the legal name and gender change process.",
+  ogImage,
+  ogAlt,
+} = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const pageTitle = Astro.url.pathname === "/" ? title : `${title} · Namesake`;
