--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,6 +20,11 @@ const year = new Date().getFullYear();
       >LinkedIn</a
     >
   </div>
+  <div class="links">
+    <strong>Legal</strong>
+    <a href="/terms">Terms</a>
+    <a href="/privacy">Privacy</a>
+  </div>
   <div class="glyph">
     <Glyph />
   </div>
@@ -28,7 +33,7 @@ const year = new Date().getFullYear();
 <style lang="scss">
   footer {
     display: flex;
-    gap: var(--space-3xl);
+    gap: var(--space-2xl);
     align-items: stretch;
     padding: var(--space-l);
     line-height: 1.5;
