fix: Display wordmark only as logo, simplify brand assets downloads (#67)

--- a/src/pages/brand-assets/index.astro
+++ b/src/pages/brand-assets/index.astro
@@ -10,23 +10,23 @@ const palette = [
     hex: "#CDA5EF",
   },
   {
-    name: "Namesake Pink",
+    name: "Pastel Pink",
     hex: "#ECADD4",
   },
   {
-    name: "Namesake Green",
+    name: "Pastel Green",
     hex: "#97CF9C",
   },
   {
-    name: "Namesake Yellow",
+    name: "Pastel Yellow",
     hex: "#ECDD85",
   },
   {
-    name: "Namesake Blue",
+    name: "Pastel Blue",
     hex: "#96C7F2",
   },
   {
-    name: "Namesake Brown",
+    name: "Pastel Brown",
     hex: "#DDB896",
   },
 ];
@@ -34,7 +34,7 @@ const palette = [
 
 <BaseLayout
   title="Brand Assets"
-  description="Download Namesake's logo, color palette, and illustrations."
+  description="Download Namesake logos, fonts, and colors."
 >
   <PageHeader
     title="Brand Assets"
@@ -48,19 +48,9 @@ const palette = [
     </p>
     <div class="logo-grid">
       <BrandAssetCard
-        name="Vertical logo"
-        assetName="namesake-vertical"
-        instructions="This is the default logo. Use it on light backgrounds."
-      />
-      <BrandAssetCard
-        name="Horizontal logo"
-        assetName="namesake-horizontal"
-        instructions="When height is scarce, this alternative logo can be used."
-      />
-      <BrandAssetCard
         name="Wordmark"
         assetName="namesake-wordmark"
-        instructions="When minimalism is key, the wordmark can be used alone."
+        instructions="The Namesake wordmark. Use this in most contexts."
       />
       <BrandAssetCard
         name="Glyph"
@@ -68,25 +58,13 @@ const palette = [
         instructions="Use this glyph for avatars and other square spaces."
       />
       <BrandAssetCard
-        name="Vertical dark"
-        assetName="namesake-vertical-inverted"
-        instructions="Use this version over media or dark backgrounds."
-        inverted
-      />
-      <BrandAssetCard
-        name="Horizontal dark"
-        assetName="namesake-horizontal-inverted"
-        instructions="Use this version over media or dark backgrounds."
-        inverted
-      />
-      <BrandAssetCard
-        name="Wordmark dark"
+        name="Wordmark on dark"
         assetName="namesake-wordmark-inverted"
         instructions="Use this version over media or dark backgrounds."
         inverted
       />
       <BrandAssetCard
-        name="Glyph dark"
+        name="Glyph on dark"
         assetName="namesake-glyph-inverted"
         instructions="Use this glyph over media or dark backgrounds."
         inverted
@@ -145,6 +123,19 @@ const palette = [
     padding-top: var(--space-3xl);
   }
 
+  .logo-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--space-l);
+    list-style: none;
+    padding-inline-start: 0;
+    margin-block: var(--space-xl);
+
+    @media (width < 620px) {
+      grid-template-columns: 1fr;
+    }
+  }
+
   .swatches {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -156,21 +147,8 @@ const palette = [
     @media (width < 680px) {
       grid-template-columns: repeat(2, 1fr);
     }
-  }
 
-  .logo-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: var(--space-l);
-    list-style: none;
-    padding-inline-start: 0;
-    margin-block: var(--space-xl);
-
-    @media (width < 1000px) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @media (width < 540px) {
+    @media (width < 500px) {
       grid-template-columns: 1fr;
     }
   }
@@ -180,7 +158,7 @@ const palette = [
     flex-direction: column;
     justify-content: flex-end;
     padding: var(--space-m);
-    aspect-ratio: 4 / 3;
+    aspect-ratio: 5 / 3;
     border: 3px solid var(--text);
   }
 
