--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,6 +6,7 @@ import { AstroFont } from "astro-font";
 import { join } from "node:path";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
+import siteInfo from "../data/site-info";
 
 export interface Props {
   title: string;
@@ -16,9 +17,9 @@ export interface Props {
 
 const {
   title,
-  description = "Namesake helps you navigate the legal name and gender change process.",
-  ogImage,
-  ogAlt,
+  description = siteInfo.description,
+  ogImage = siteInfo.image.src,
+  ogAlt = siteInfo.image.alt,
 } = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
@@ -32,6 +33,7 @@ const pageTitle = Astro.url.pathname === "/" ? title : `${title} · Namesake`;
     <meta name="generator" content={Astro.generator} />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="light" />
+    <meta name="theme-color" content="#CDA5EF" />
     <link rel="icon" href="/favicon.ico?v3" sizes="32x32" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg?v3" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
@@ -40,6 +42,8 @@ const pageTitle = Astro.url.pathname === "/" ? title : `${title} · Namesake`;
     <meta name="description" content={description} />
     <meta property="og:title" content={title} />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content={new URL(ogImage, Astro.url.origin)} />
+    <meta property="og:image:alt" content={ogAlt} />
     <meta property="og:description" content={description} />
     <meta property="og:url" content={canonicalURL} />
     <meta property="og:locale" content="en_US" />
