--- a/src/pages/brand-assets/index.astro
+++ b/src/pages/brand-assets/index.astro
@@ -34,7 +34,7 @@ const palette = [
 
 <BaseLayout
   title="Brand Assets"
-  description="Download Namesake logos, fonts, and colors."
+  description="Download Namesake logos, fonts, and colors for use on other sites."
 >
   <PageHeader
     title="Brand Assets"
@@ -160,6 +160,7 @@ const palette = [
     padding: var(--space-m);
     aspect-ratio: 5 / 3;
     border: 3px solid var(--text);
+    border-radius: 2px;
   }
 
   .button {
@@ -168,6 +169,7 @@ const palette = [
     font-weight: 600;
     background-color: var(--text);
     border: 3px solid var(--text);
+    border-radius: 2px;
     color: var(--bg-purple);
     text-decoration: none;
     padding: var(--space-s) var(--space-m);
