--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,15 +5,13 @@ import { RiArrowRightLine } from "react-icons/ri";
 import illustration from "./_images/namesake-form.png";
 import formIllustration from "./_images/form-snail.png";
 import { getCollection } from "astro:content";
+import siteInfo from "../data/site-info";
 
 const partners = await getCollection("partners");
 const shuffledPartners = partners.sort(() => 0.5 - Math.random());
 ---
 
-<BaseLayout
-  title="Namesake"
-  description="Namesake streamlines the legal name and gender marker change process for trans, nonbinary, and gender expansive folks."
->
+<BaseLayout title={siteInfo.name} description={siteInfo.description}>
   <div class="home">
     <Image
       class="illustration"
@@ -30,25 +28,29 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
       </h1>
       <div class="subhead">
         <p>
-          <strong>Legally changing name and gender is a challenge.</strong> You have
-          to navigate the courts, fill out dense paperwork, and tackle steps in a
-          specific and poorly-communicated order. For some, the process can take
-          years to complete. And you have to do it all while navigating big emotions
-          around what it means to embrace a new identity.
+          <strong>It’s tough to change your legal name and gender.</strong> There’s
+          loads of paperwork. You have to dig up your birth certificate, find a notary,
+          show up at a courthouse, and pay filing fees… and that’s just the first
+          step. Then comes updating your ID, social security, banks, schools, and
+          a hundred other places.
         </p>
         <p>
-          We’ve been through this process ourselves, and we think it can be
-          better. We built Namesake to help you navigate the process, step by
-          step, with community support along the way.
+          <strong>We think it can be easier.</strong> We’re a trans-led team with
+          years of experience running name change clinics. We’re building a digital
+          platform for clear, step-by-step name change guidance and community support,
+          for free.
         </p>
         <p>
-          We’re finishing up the app right now and we plan to launch this
-          Summer, starting in Massachusetts.
-        </p>
-        <p>
-          Rigid systems weren’t built for us, but <span class="figure-it-out"
-            >we’ll figure them out together.</span
+          <strong
+            >The new Namesake app will launch in Massachusetts later this
+            summer, with other states to follow.</strong
           >
+          <a href={siteInfo.socialLinks.discord.href}>Join us on Discord</a> to get
+          early access.
+        </p>
+        <p>
+          Rigid systems weren’t built for us, but we’ll figure them out
+          together.
         </p>
       </div>
       <form>
@@ -104,19 +106,6 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
     highlight.show();
   }
 
-  const figureItOut: HTMLElement | null =
-    document.querySelector(".figure-it-out");
-  if (figureItOut) {
-    const underline = annotate(figureItOut, {
-      type: "underline",
-      multiline: true,
-      iterations: 1,
-      padding: 1,
-      animate: false,
-    });
-    underline.show();
-  }
-
   const partners: HTMLElement | null = document.querySelector(".partners h2");
   if (partners) {
     const brackets = annotate(partners, {
@@ -163,6 +152,7 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
 
   .content {
     grid-area: content;
+    min-width: 0;
   }
 
   .partners {
@@ -233,6 +223,7 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
     margin-block-start: var(--space-3xl);
     padding: var(--space-l) var(--space-m);
     position: relative;
+    border-radius: 2px;
 
     @media (width < 540px) {
       width: 100%;
@@ -247,10 +238,10 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
   }
 
   .input-group {
+    max-width: 100%;
     display: flex;
     gap: var(--space-xs);
     margin-block-start: var(--space-s);
-    flex: 1;
   }
 
   input,
@@ -264,6 +255,7 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
 
   input {
     flex: 1;
+    min-width: 0;
 
     &::placeholder {
       color: var(--text-placeholder);
