--- a/src/pages/press.astro
+++ b/src/pages/press.astro
@@ -12,7 +12,7 @@ pressArticles.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 
 <BaseLayout
   title="Press"
-  description="Media coverage about Namesake and press releases."
+  description="Browse recent media coverage and press releases about Namesake."
 >
   <PageHeader title="Press" />
   <ul class="articles">
