--- a/src/pages/chat.astro
+++ b/src/pages/chat.astro
@@ -1,3 +1,6 @@
 ---
-return Astro.redirect("https://discord.gg/8Vy2bbQ5C2");
+// Server-render page to avoid temporary flash of "redirecting..." plain text page
+export const prerender = false;
+
+return Astro.redirect("https://discord.gg/8Vy2bbQ5C2", 308);
 ---
